# jianying-cache-extractor

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  REFLECTION.md  entry.py  setup.cfg  start.bat  stop.bat  test_basic.py
docs/: cache-extractor-software-plan.md  codex-task-gui-polish.md  codex-task-ui-inspect.md  gui-migration-plan.md  jianying-automation-research.md  ui_inspect_report.md  ui_tree_full.txt
jianying_controller/: __init__.py  __main__.py
scripts/: start.ps1  stop.ps1  ui_inspect.py
src/jianying_controller/: __init__.py  __main__.py  auto_import.py  cache_extractor.py  compound_clip.py  draft_creator.py  draft_detector.py  env.py  gui.py  media_validator.py  models.py  private_cache_draft.py  private_cache_scan.py  private_prepare.py  process.py  project_detector.py  source_resolver.py  workflow.py
src/jianying_controller/frontend/: app.js  index.html  style.css
src/jianying_controller/gui/: __init__.py  api.py  state.py
tests/: conftest.py  test_cache_extractor.py  test_cli_contract.py  test_draft_creator.py  test_draft_creator_recovery.py  test_draft_detector_cache_workflow.py  test_gui_cli_contract.py  test_gui_presenters.py  test_launcher_scripts.py  test_media_validator.py  test_models_env.py  test_private_prepare_launcher.py  test_process.py  test_process_compound_auto_import.py  test_source_resolver.py  test_workflow.py
