[metadata]
name = jianying-controller
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    pymediainfo
    psutil
    pyJianYingDraft
    ttkbootstrap>=1.10
    pyautogui
    pywin32

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
pythonpath = src
addopts = --basetemp=.pytest-tmp
